# one-wellness

./: .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  PRD.md  README.md  SPRINT_0_MANUAL_CHECKLIST.md  deep-research-report.md  docker-compose.yml  justfile  render.yaml  vercel.json
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_users_table.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: auth.py  users.py
backend/app/core/: config.py  database.py  redis.py  security.py
backend/app/models/: user.py
backend/app/schemas/: auth.py  user.py
backend/tests/: conftest.py  test_auth.py
backend/tests/integration/: conftest.py  test_auth_flow.py  test_docker_health.py  test_totp_flow.py
backend/tests/unit/: conftest.py  test_account_deletion.py
docs/: AI_SERVICE_SPEC.md  API_SPEC.md  DATA_MODEL.md  DECISION_LOG.md  ENVIRONMENT_SETUP.md  SECURITY_SPEC.md  SPRINT_PLAN.md  TESTING_STRATEGY.md
frontend/: Dockerfile  next.config.ts  package.json
frontend/app/: globals.css  layout.tsx
frontend/app/[locale]/: layout.tsx  page.tsx
frontend/messages/: ar.json  en.json
