[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "gcc-wellness-backend"
version = "0.1.0"
description = "GCC Wellness Platform — FastAPI backend"
requires-python = ">=3.12"

dependencies = [
    # Web framework
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "python-multipart==0.0.9",

    # Database
    "sqlalchemy[asyncio]==2.0.35",
    "asyncpg==0.29.0",
    "alembic==1.13.3",
    "pgvector==0.3.3",

    # Redis
    "redis[hiredis]==5.1.1",

    # Settings / validation
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",

    # Auth / security
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "bcrypt>=4.0.0,<5.0.0",
    "cryptography==43.0.1",
    "pyotp==2.9.0",

    # AI providers
    "anthropic==0.40.0",
    "openai==1.51.0",

    # Email
    "sendgrid==6.11.0",

    # SMS
    "twilio==9.3.5",

    # Push notifications
    "firebase-admin==6.5.0",

    # Object storage (Cloudflare R2 via S3-compatible API)
    "boto3==1.35.28",

    # HTTP client
    "httpx==0.27.2",

    # Observability
    "sentry-sdk[fastapi]==2.16.0",
    "posthog==3.7.0",

    # Utilities
    "python-dotenv==1.0.1",
    "structlog==24.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "pytest-cov==5.0.0",
    "httpx==0.27.2",
    "ruff==0.7.1",
    "mypy==1.11.2",
    "factory-boy==3.3.1",
    "faker==30.3.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100
select = ["E", "F", "I", "N", "UP", "S", "B", "A", "C4", "PT"]
ignore = ["S101"]  # allow assert in tests

[tool.ruff.per-file-ignores]
"tests/*" = ["S", "N"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
